fix: Header button spacing

--- a/src/components/Page/Header/Header.module.css
+++ b/src/components/Page/Header/Header.module.css
@@ -18,6 +18,7 @@
 
   text-align: left;
   padding-left: 8px;
+  flex: 1;
 
   a {
     color: currentColor;
@@ -26,6 +27,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: fit-content;
+    padding-right: 8px;
   }
 }
 
